2008-04-24  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/idl/totemIBasicPlayer.idl:
	* browser-plugin/idl/totemIComplexPlayer.idl:
	* browser-plugin/idl/totemICone.idl:
	* browser-plugin/idl/totemIConeAudio.idl:
	* browser-plugin/idl/totemIConeInput.idl:
	* browser-plugin/idl/totemIConePlaylist.idl:
	* browser-plugin/idl/totemIConePlaylistItems.idl:
	* browser-plugin/idl/totemIConeVideo.idl:
	* browser-plugin/idl/totemIGMPControls.idl:
	* browser-plugin/idl/totemIGMPError.idl:
	* browser-plugin/idl/totemIGMPErrorItem.idl:
	* browser-plugin/idl/totemIGMPMedia.idl:
	* browser-plugin/idl/totemIGMPPlayer.idl:
	* browser-plugin/idl/totemIGMPPlayerApplication.idl:
	* browser-plugin/idl/totemIGMPPlaylist.idl:
	* browser-plugin/idl/totemIGMPPlaylistArray.idl:
	* browser-plugin/idl/totemIGMPPlaylistCollection.idl:
	* browser-plugin/idl/totemIGMPSettings.idl:
	* browser-plugin/idl/totemIMullYPlayer.idl:
	* browser-plugin/idl/totemINarrowSpacePlayer.idl:
	* browser-plugin/totem-glow-button.c:
	* browser-plugin/totem-glow-button.h:
	* browser-plugin/totem-plugin-viewer-constants.h:
	* browser-plugin/totem-plugin-viewer-options.h:
	* browser-plugin/totem-plugin-viewer.c:
	* browser-plugin/totemBasicPlugin.cpp:
	* browser-plugin/totemBasicPlugin.h:
	* browser-plugin/totemClassInfo.h:
	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemComplexPlugin.h:
	* browser-plugin/totemConePlugin.cpp:
	* browser-plugin/totemConePlugin.h:
	* browser-plugin/totemDebug.h:
	* browser-plugin/totemGMPError.cpp:
	* browser-plugin/totemGMPError.h:
	* browser-plugin/totemGMPPlaylist.cpp:
	* browser-plugin/totemGMPPlaylist.h:
	* browser-plugin/totemGMPPlugin.cpp:
	* browser-plugin/totemGMPPlugin.h:
	* browser-plugin/totemGMPSettings.cpp:
	* browser-plugin/totemGMPSettings.h:
	* browser-plugin/totemMullYPlugin.cpp:
	* browser-plugin/totemMullYPlugin.h:
	* browser-plugin/totemNarrowSpacePlugin.cpp:
	* browser-plugin/totemNarrowSpacePlugin.h:
	* browser-plugin/totemPlugin.cpp: